<resources>
    <string name="app_name">Done!</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="new_description">New Description</string>
    <string name="edit_description">Create A Description</string>
    <string name="new_event">New Event</string>
    <string name="tasks">Tasks</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="events">Events</string>
    <string name="no_events_available">You don\'t have any events!</string>
    <string name="adde">Press the plus button to create an event</string>
    <string name="no_tasks_available">You don\'t have any tasks!</string>
    <string name="addt">Press the plus button to create a task</string>
</resources>