<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tasks"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tasksText"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:nestedScrollingEnabled="true" />

    <TextView
        android:id="@+id/noTaskText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible"
        android:layout_marginBottom="50dp"
        android:alpha=".5"
        android:text="@string/no_tasks_available"
        android:textSize="32sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/createTaskText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible"
        android:alpha=".5"
        android:layout_marginTop="10dp"
        android:text="@string/addt"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="32dp"
        android:backgroundTint="#4CBB17"
        android:src="@drawable/ic_baseline_add_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:onClick="back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

</RelativeLayout>